--- a/PaddleSeg：人像精细分割+换背景体验/PaddleSeg练习：Matting抠像与背景替换.ipynb
+++ b/PaddleSeg：人像精细分割+换背景体验/PaddleSeg练习：Matting抠像与背景替换.ipynb
@@ -623,25 +623,25 @@
     "#### 展示预测效果\n",
     "* 单人预测效果：还不错\n",
     "<div align='left'>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/predict_data/WechatIMG10.jpg' width='300'/>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/output/results/WechatIMG10.jpg' width='300'/>\n",
+    "  <img src='./Matting/predict_data/WechatIMG10.jpg' width='300'/>\n",
+    "  <img src='./Matting/output/results/WechatIMG10.jpg' width='300'/>\n",
     "</div>\n",
     "\n",
     "\n",
     "* 多人预测效果：差强人意\n",
     "<div align='left'>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/predict_data/WechatIMG11.jpg' width='300'/>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/output/results/WechatIMG11.jpg' width='300'/>\n",
+    "  <img src='./Matting/predict_data/WechatIMG11.jpg' width='300'/>\n",
+    "  <img src='./Matting/output/results/WechatIMG11.jpg' width='300'/>\n",
     "</div>\n",
     "<div align='left'>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/predict_data/WechatIMG12.jpg' width='300'/>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/output/results/WechatIMG12.jpg' width='300'/>\n",
+    "  <img src='./Matting/predict_data/WechatIMG12.jpg' width='300'/>\n",
+    "  <img src='./Matting/output/results/WechatIMG12.jpg' width='300'/>\n",
     "</div>\n",
     "\n",
     "* 小猫咪预测效果：比较差（和数据集有关系）\n",
     "<div align='left'>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/predict_data/WechatIMG14.jpg' width='300'/>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/output/results/WechatIMG14.jpg' width='300'/>\n",
+    "  <img src='./Matting/predict_data/WechatIMG14.jpg' width='300'/>\n",
+    "  <img src='./Matting/output/results/WechatIMG14.jpg' width='300'/>\n",
     "</div>"
    ]
   },
@@ -758,8 +758,8 @@
     " \n",
     " \n",
     "<div align='left'>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/predict_data/WechatIMG10.jpg' width='300'/>\n",
-    "  <img src='work/PaddleSeg/contrib/Matting/output/bg_results/WechatIMG10.jpg' width='300'/>\n",
+    "  <img src='./Matting/predict_data/WechatIMG10.jpg' width='300'/>\n",
+    "  <img src='./Matting/output/bg_results/WechatIMG10.jpg' width='300'/>\n",
     "</div>\n",
     "  \n"
    ]
