--- a/PaddleX：钢筋计数全流程开发体验/PaddleX：钢筋计数全流程开发体验.ipynb
+++ b/PaddleX：钢筋计数全流程开发体验/PaddleX：钢筋计数全流程开发体验.ipynb
@@ -55,7 +55,7 @@
     "### 模型预测效果\n",
     "图像存储地址：./output/yolov3_mobilnetv1/visualize_4B145787.jpg\n",
     "<div align=\"center\">\n",
-    "    <img src=\"output/yolov3_mobilnetv1/visualize_4B145787.jpg\" width=\"700\"/>\n",
+    "    <img src=\"./visualize_4B145787.jpg\" width=\"700\"/>\n",
     "</div>"
    ]
   },
